<resources>
    <string name="app_name">UTLA</string>
    <string name="titulo_principal">Uma TL anônima</string>
    <string name="action_settings">Settings</string>

    <string name="bem_vindo">Bem vindo ao UTLA!</string>

    <string name="entrar">Entrar</string>
    <string name="criar_conta"><u>Criar uma conta</u></string>

    <string name="nome_usuario">Nome de usuário</string>
    <string name="senha">Senha</string>

    <!-- Criando um novo usuário -->
    <string name="criando_uma_conta">Criando uma conta</string>
    <string name="inserir_usuario">Insira um nome de usuário</string>
    <string name="inserir_senha">Insira uma senha</string>
    <string name="bt_criar_conta">Criar conta</string>
    <string name="bt_sugerir_nome_usuario">Sugerir um nome anônimo</string>

    <string name="escolhendo_um_nome_usuario">Escolhendo um nome de usuário aleatório...</string>
    <string name="selecione_um_animal">Selecione um animal</string>
    <string name="selecione_uma_cidade">Selecione uma cidade</string>
    <string name="resultado_nome_usuario">Nome de usuário gerado:</string>
    <string name="bt_gerar_outro">Gerar Outro</string>
</resources>
